Bug 44832 - error plotting axis
Summary: error plotting axis
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: highest critical
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0
Keywords:
: 46130 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-16 07:25 UTC by uno_wos
Modified: 2012-03-20 05:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
and example of wrong axis plot (24.73 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-01-16 07:25 UTC, uno_wos
Details
error plotting axis (21.83 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-01-18 12:15 UTC, uno_wos
Details
The diagram on fileopen (50.69 KB, image/jpeg)
2012-02-25 10:13 UTC, Florian Reisinger
Details
The diagram after doubleclicking and giving away the focus (Sorry for the English...) (43.62 KB, image/jpeg)
2012-02-25 10:15 UTC, Florian Reisinger
Details
the original file (26.61 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-02-27 06:00 UTC, uno_wos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uno_wos 2012-01-16 07:25:28 UTC
Created attachment 55642 [details]
and example of wrong axis plot

In ubuntu 10.04 32bit, using LibreOffice 3.4.5 Calc (or Spreadsheet)
You tried to plot the axis' leyend and it appears wrongly.
In 3.3.x didnt happend. Start to happend in 3.4.x

The problem appears when you have more than one row to plot.
See the example!

Thanks

pa_descargar_cosas@yahoo.com
Comment 1 uno_wos 2012-01-16 07:32:29 UTC
Well, it is actually the axis, not the leyend (i express myselft wrong).
Comment 2 Regina Henschel 2012-01-18 11:04:16 UTC
The attached document has already lost the settings for Data Series. It might be, that the file had been affected by bug #36339. If the data series are corrupted, they cannot be repaired automatically, but you have to enter the correct ranges manually.

Can you please try, if you can reproduce the error with a document, that is still correct in LO3.3 and will be wrong in LO3.5? (Use a copy of the file!)
Comment 3 uno_wos 2012-01-18 12:15:38 UTC
Created attachment 55752 [details]
error plotting axis

still is the same bug...
it is an answer for Regina Henschel <rb.henschel@t-online.de
in this case i use LOdev 3.50beta3 in windows 7 64
Comment 4 Florian Reisinger 2012-02-25 10:13:44 UTC
Created attachment 57633 [details]
The diagram on fileopen

See second attachment...
Comment 5 Florian Reisinger 2012-02-25 10:15:32 UTC
Created attachment 57634 [details]
The diagram after doubleclicking and giving away the focus (Sorry for the English...)

It definitely should not look like this...
Comment 6 Florian Reisinger 2012-02-25 10:17:07 UTC
Because of hoping on a quick fix, I will assign the bug to a Calc pro hacker.
My OS Win7x64 LibO 3.5
Comment 7 Regina Henschel 2012-02-25 10:46:05 UTC
I cannot reproduce it. Please attach the document as it has been saved in LO 3.3. We do not need the version from LO 3.5, but we need the original content of the file.

I work on WinXP. Can you please test it on WinXP too and/or on another Linux distribution.
Comment 8 uno_wos 2012-02-25 10:48:38 UTC
I appreciate it.
I hope this bug could be soon solved.

Thanks for the support.
Comment 9 uno_wos 2012-02-25 15:34:18 UTC
I have lost the original file in LO3.3
But you can reproduce it with this:


Graphic tipe:
Lineal. Dot and lines.
Row data series.
1st column as tag.

Y Value:
$Hoja1.$B$5:$M$5;$Hoja1.$B$8:$M$8;$Hoja1.$B$11:$M$11;$Hoja1.$B$14:$M$14

Categories:
$Hoja1.$B$4:$M$4;$Hoja1.$B$7:$M$7;$Hoja1.$B$10:$M$10;$Hoja1.$B$13:$M$13

Im using spanish version (so i translate the menus as i think it is). So where is "Hoja1" you should put "Sheet1" or something similar. You can replace it.

It happens in 3.4.5 onwards (also 3.5 of course). Also in Windows (XP,7) or any linux distribution...

If you need more specifications, just let me know.
Comment 10 Eike Rathke (retired, only occasionally showing up) 2012-02-27 03:13:17 UTC
I may be a Calc expert, but I'm not a Chart expert..
Anyway, could someone please create a working test case document in LibO/OOo 3.3 and attach it? Thanks.
Comment 11 uno_wos 2012-02-27 06:00:06 UTC
Created attachment 57718 [details]
the original file

This file was done with oo3.2
Comment 12 uno_wos 2012-02-27 06:01:47 UTC
(In reply to comment #10)
> I may be a Calc expert, but I'm not a Chart expert..
> Anyway, could someone please create a working test case document in LibO/OOo
> 3.3 and attach it? Thanks.

Ok. I make my research and i have (somehow) good news.
I tried LO3.3 and, know what? Still the bug is there.
So i read the metadata of one old file that works fine, and it was made with OPENOFFICE 3.2.

So openoffice 3.2 works fine.
openoffice 3.3 (i dont know)
libreoffice 3.3 and onwards (the bug is there)

So, i just attached and OO3.2-without_bug-file
Comment 13 Regina Henschel 2012-02-27 07:06:03 UTC
Now I see what you want to do.
I have got some older versions and can see, that it is OK in DEV300m73(Build 9486) and is broken in DEV300m75(Build 9488). That has been 2010-03-08 to 2010-03-16 approximately.
Comment 14 uno_wos 2012-02-27 07:27:51 UTC
(In reply to comment #13)
> Now I see what you want to do.
> I have got some older versions and can see, that it is OK in DEV300m73(Build
> 9486) and is broken in DEV300m75(Build 9488). That has been 2010-03-08 to
> 2010-03-16 approximately.

A long-trace bug.
I hope it could be solved.
If you need something more, just tell me.
Comment 15 GerardF 2012-02-27 09:36:15 UTC
May be related to this feature : http://www.openoffice.org/dev_docs/features/3.3/#Hierarchical_Axis_Labels_for_Charts ?
Comment 16 Regina Henschel 2012-02-27 10:16:09 UTC
@GeraldF: I think, that you are right. That feature was developed in CWS chartmultiline and that CWS was merged to DEV300m74 at 2010-03-09.
Comment 17 Markus Mohrhard 2012-03-03 15:22:00 UTC
Can you please check with Libreoffice 3.5.1 or attach a screenshot of the expected result.

I think the file looks correct and I fixed some bugs for 3.5.1 and 3.5.2 related to this.

@Eike, I hope you don't mind if I take this. Hopefully it has been fixed already with http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5-1&id=065cdf07791b2de4c6ab580084d21d2b5020ca98
Comment 18 Markus Mohrhard 2012-03-03 15:30:09 UTC
Ok, my fix seems to help for fileopen helps but there are even more issues there. Let me see if I can find the remaining issues.
Comment 19 Markus Mohrhard 2012-03-03 19:55:41 UTC
There seems to be a really strange issue in VCartesianAxis::createAllTickInfosFromComplexCategories.

TickInfo::fScaledTickValue should store the position of the axis labels but it contains more or less useless data for the second and following categories.
Comment 20 Not Assigned 2012-03-04 08:22:22 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a769fd1ec076b61c1ce2f84da87283cc637dd5d5

correctly set the position of the axis labels, related fdo#44832
Comment 21 Markus Mohrhard 2012-03-04 08:26:21 UTC
My patch fixes only the positioning problem. There are even more problems around formatting of the string, transformation of the text shape, ... for the second category and following.

I'm not sure if we should include this patch if we don't find someone knowing this code quite well or testing the hell out of the complex category charts. The CWS introducing this bug has already introduced several other issues and this patch while fixing this bug might cause new regressions.
Comment 22 Markus Mohrhard 2012-03-04 11:33:41 UTC
Ok, I finally a have a fix that solves all remaining problems. The question is why Ingrid Halama added these lines in the first place.

I will not ask for 3-5 review without someone either fully understanding this issue or someone testing these fixes with a set of test documents.

I will send the patch for review to the ML and won't include it directly into master.
Comment 23 uno_wos 2012-03-05 08:40:19 UTC
So, is there something that we (common humans) could do?
Is there something (version libreoffice 3.5.1 beta)that we could try?
Comment 24 Not Assigned 2012-03-05 08:51:37 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a1be31fd8bf830a4f5961e690bcffd050782e210

fdo#44832: Follow-up fix for axis labels for complex categories
Comment 25 Markus Mohrhard 2012-03-05 11:03:59 UTC
This patch will not be in the 3-5 release.

But there is one thing that would help us quite a lot: It would be great if someone could create a set of test documents containing a lot of different chart features. These would allow us to be safer when we fix bugs and we could try to integrate them into our automatic tests to prevent regressions.
Comment 26 Markus Mohrhard 2012-03-20 05:43:38 UTC
*** Bug 46130 has been marked as a duplicate of this bug. ***