correctly set the position of the axis labels, related fdo#44832

There are still some more issues but at least they are now correctly
located in the right position

All advanced attributes are not yet applied.